--- a/integrations/saas/jenkins.mdx
+++ b/integrations/saas/jenkins.mdx
@@ -12,6 +12,25 @@ Ctrlplane workspace for pending jobs assigned to it.
 
 ## Architecture & Air-Gapped Environments
 
+The following is a diagram of the architecture:
+
+```mermaid
+sequenceDiagram
+    participant U as User/Deployment
+    participant CP as Ctrlplane API
+    participant JA as Jenkins Job Agent
+    participant JP as Jenkins Pipeline Job
+
+    U->>CP: Initiate Deployment
+    CP->>JA: Expose pending job details
+    loop Polling Interval
+         JA->>CP: Poll for pending jobs
+    end
+    JA->>JP: Trigger job with JOB_ID parameter
+    JP-->>JA: Return job status
+    JA-->>CP: Report job outcome
+```
+
 This polling design has a key advantage for security and network configuration:
 
 *   **Egress Only:** The Jenkins instance only needs outbound (egress) network
