--- a/integrations/saas/jenkins.mdx
+++ b/integrations/saas/jenkins.mdx
@@ -12,7 +12,8 @@ Setting up the Ctrlplane Jenkins integration involves the following steps in ord
 3. **Create a Jenkins Pipeline Job** - Define your Jenkins pipeline job with the Ctrlplane integration
 4. **Link to Ctrlplane Deployment** - Configure the Jenkis to trigger for your Ctrlplane Deployment
 
-Following this sequence is important as each step depends on the previous one being completed successfully.
+Following this sequence is important as each step depends on the previous one being 
+completed successfully.
 
 ## Introduction
 
